Remove python setup.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Python all python version
-        with:
-          python-version: 3.8
-          architecture: x64
+      - name: Validate python version
+        run: python --version
+
       - name: Install dependencies
        run: pip install pytest
+
       - name: Run Test
        run: python -m pytest tests/
